# powerctl

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/powerctl/: __init__.py  client.py
src/powerctl/core/: __init__.py  base.py  exceptions.py  host.py  registry.py
src/powerctl/drivers/: __init__.py  _redfish.py  amt.py  idrac.py  ilo.py  ssh_linux.py  ssh_windows.py
tests/: test_powerctl.py
